added http provider

--- a/sample/src/app/product-list/product-list.component.html
+++ b/sample/src/app/product-list/product-list.component.html
@@ -23,7 +23,7 @@
       <thead>
         <tr>
           <th>
-            <button class='btn btn-primary btn-xs' (click)="showImages = !showImages">Show Image</button>
+            <button class='btn btn-primary btn-xs' (click)="showImages = !showImages">{{buttonTitle}} Images</button>
           </th>
           <th>Product</th>
           <th>Code</th>
